--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form action = "/recipes/new" method = "post">
-  <input type="text" name="name">
+  <input type="text" id="name" name="name">
   <input type="text" name="ingredients">
   <input type="text" name="cook_time">
   <input type="submit" value="submit">
