--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,4 @@
-<form action = "/recipes/new" method = "post">
+<form action = "/recipes" method = "post">
   <label for "name"> Name: </label>
   <input type="text" id="name" name="name">
   <input type="text" name="ingredients">
